# rsl

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml
src/: clean.rs  clipboard.rs  main.rs  resolve.rs
src/clean/: facebook.rs  generic.rs  instagram.rs  mod.rs  reddit.rs
